syntax = "proto3";

option csharp_namespace = "Ordering.PaymentService.Protos";

import "Protos/Models.proto";
service ChargingService {
	rpc Charge (PaymentRequest) returns (PaymentResponse);
}
